# adaptive_autosar

./: .bazelrc  .gitignore  .gitlint  .gitmodules  .pre-commit-config.yaml  .project  BUILD  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  Jenkinsfile  README.md  WORKSPACE  build.sh
.devcontainer/: .bazelrc  Dockerfile  devcontainer.json  post_start.sh
application/: BUILD  starter_kit_adaptive_xavier.BUILD
application/mbition-app-prototype/lib/mbition_use_case_1/: CMakeLists.txt  use_case_1.cc
application/mbition-app-prototype/lib/mbition_use_case_1/includes/: use_case_1.h
arxmls/: BUILD  CivicRolle_Blinder_final_with_datatype.arxml  Civic_Export.arxml  Civic_Export_patched_all_vector_no_errors.arxml  ECU7_CTP_Cluster_R1B5.arxml  Gen20x_Civic_i3_ECU_Extract.arxml  X6AA_IDC_M_P_STAR_35_Ecu_Extract_2021_17a0_AR44.arxml  X6AA_IDC_M_P_STAR_35_Ecu_Extract_2021_17a0_AR44_Release21052021_Patched_final.arxml  X6AA_IDC_M_P_STAR_35_Ecu_Extract_2021_17a0_AR44_Release28052021_PATCHED.arxml
bazel/: defs.bzl  patch_to_enable_selects_in_rules_docker_entrypoints.patch
bsw/: BUILD  add-console-log-option-in-vector-sip-log-daemon.patch  amsr_xavier.BUILD  cmake-package-exports-remianing-libs.patch  defs.bzl  remove-controlpanel-symlink-in-vector-sip.patch  socal-target-include-directory-for-someipbinding.patch  starter_kit_adaptive_xavier.BUILD  vector_sip.BUILD
doc/: bazel-build.md
docs/: HowToCreateAutosarApp.md  bazel_tips_and_tricks.md  build_on_win.md  circular_dependency_workaround.md  how_to_create_adaptive_app.md  how_to_deploy_on_agx.md  known_issues_and_fixes.md  (+5 more)
(+466 files in other folders)
